Fixed the contrast with rose letters

--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ a {
 }
 
 .rose-item {
-	color: #f59797;
+	color: #d87a7b;
 }
 
 
